# fk

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  eslint.config.js  flake.nix  index.html  main.js  package-lock.json  package.json  shell.nix  style.css  tauri.conf.json  vite.config.js  vite.config.ts
.github/workflows/: cicd.yml
icons/: icon.icns
src/: App.css  App.tsx  ai.js  api.ts  colorPicker.js  editor.js  fileOperations.js  findReplace.js  history.js  index.css  instructionsDoc.ts  main.rs  main.tsx  sampleDoc.ts  snippets.js  syntaxValidator.js  themes.ts  typstAutocomplete.js  typstLanguage.js  typstPreview.js  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/content/: instructions.md  theme-showcase.md  tideflow.typ
src-tauri/src/: image_export.rs  lib.rs  main.rs  preprocessor.rs  render_pipeline.rs  renderer.rs
src-tauri/src/commands/: file_ops.rs  render_ops.rs
src-tauri/src/utils/: filesystem.rs  initialization.rs  typst.rs
src/components/: DesignModal.css  DesignModal.tsx  Dropdown.css  Dropdown.tsx  Editor.css  Editor.tsx  EditorToolbar.tsx  ErrorBoundary.css  KeyboardShortcutsModal.tsx  PDFErrorBoundary.css  PDFErrorBoundary.tsx  PDFPreview.css  PDFPreview.tsx  PDFPreviewHeader.tsx  SearchModal.tsx  SearchWidget.css  SearchWidget.tsx  SettingsModal.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  Toast.css  Toast.tsx  Toolbar.css  Toolbar.tsx
src/components/DesignModal/: AboutTab.css  AboutTab.tsx  AdvancedTab.css  AdvancedTab.tsx  DocumentTab.tsx  ImagesTab.tsx  PresetsTab.tsx  SpacingTab.tsx  (+6 more)
src/constants/: timing.ts
src/hooks/: useAnchorManagement.ts  useAppInitialization.ts  useCodeMirrorSetup.ts  useContentManagement.ts  useDragToScroll.ts  useEditorState.ts  useEditorSync.ts  useEditorToPdfSync.ts  useFileOperations.ts  useImageHandlers.ts  usePdfRenderer.ts  usePdfToEditorSync.ts  useScrollState.ts  useWindowManagement.ts
src/stores/: editorStore.ts  preferencesStore.ts  uiStore.ts
src/styles/: primitives.css  themes.css  themes.ts
src/utils/: asyncErrorHandler.ts  dropEventCoordinator.ts  errorHandler.ts  logger.ts  offsets.ts  openExternal.ts  pdfRenderer.ts  scrollGuards.ts
(+10 files in other folders)
