[package]
name = "Feather-ink"
version = "0.1.0"
description = "A Typst IDE with live preview"
authors = ["LFakh"]
license = "Apache 2"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.1", features = [] }
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
tar = "0.4"
xz2 = "0.1"

[dependencies]
tauri = { version = "=2.8.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-shell = "=2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zip = { version = "0.6", default-features = false, features = ["deflate", "time"] }
tar = "0.4"
xz2 = "0.1"
regex = "1.8"