[package]
name = "Feather-ink"
version = "0.1.0"
description = "A Typst IDE with live preview"
authors = ["LFakh"]
license = "Apache 2"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zip = { version = "0.6", default-features = false, features = ["deflate", "time"] }
tar = "0.4"
xz2 = "0.1"
regex = "1"
typst = "0.13.1" 
[features]
custom-protocol = ["tauri/custom-protocol"]
